Fixing issue where text in login page is unreadable sometimes

--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -93,6 +93,7 @@
   border-radius: 999px;
   border: 1px solid #ccc;
   font-size: 0.9rem;
+  color: #333;
 }
 
 .login-right-content a {
